[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
derive_builder = "0.20.0"
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
rand = "0.8.5"
itertools = "0.12.1"
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }
futures = { workspace = true }


[dev-dependencies]
fake = { version = "2.9.2", features = ["derive", "chrono"] }
nanoid = "0.4.0"

[build-dependencies]
proto-builder-trait = "0.6.1"
anyhow = { workspace = true }
tonic-build = { workspace = true }
